<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:orientation="vertical"
    tools:context="com.ayj.aiyijia.activity.home.bx.InsuranceMainActivity">

    <include layout="@layout/common_title_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/bxfwbanner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/insurance_platform_title"
                android:textSize="15sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/insurance_main_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/insurance_main_company"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_4"
                android:padding="@dimen/dp_4"
                android:background="@drawable/radius_background_white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hot"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:id="@+id/car_insurance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/ripple_bg">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_4"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:text="旅游险" />

                    <ImageView
                        android:layout_width="7dp"
                        android:layout_height="13dp"
                        android:layout_alignParentRight="true"
                        android:layout_margin="13dp"
                        android:background="@mipmap/item_more" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="#d7d7d7" />

                <RelativeLayout
                    android:id="@+id/family_insurance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/ripple_bg">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_4"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/familyInsurance" />

                    <ImageView
                        android:layout_width="7dp"
                        android:layout_height="13dp"
                        android:layout_alignParentRight="true"
                        android:layout_margin="13dp"
                        android:background="@mipmap/item_more" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_4"
                android:layout_marginTop="10dp"
                android:padding="@dimen/dp_4"
                android:background="@drawable/radius_background_white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choiceness"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:id="@+id/accident_insurance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/ripple_bg">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_4"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/accidentInsurance" />

                    <ImageView
                        android:layout_width="7dp"
                        android:layout_height="13dp"
                        android:layout_alignParentRight="true"
                        android:layout_margin="13dp"
                        android:background="@mipmap/item_more" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="#d7d7d7" />

                <RelativeLayout
                    android:id="@+id/property_insurance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/ripple_bg">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_4"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/propertyInsurance" />

                    <ImageView
                        android:layout_width="7dp"
                        android:layout_height="13dp"
                        android:layout_alignParentRight="true"
                        android:layout_margin="13dp"
                        android:background="@mipmap/item_more" />
                </RelativeLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
