<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include layout="@layout/common_title_layout"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1075"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20">
        </TextView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="710"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="80">
            </TextView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="150"
                android:src="@mipmap/zc_logo1"
                android:layout_gravity="center">
            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="30">
            </TextView>

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="75">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CompanyName"
                android:textColor="@color/black"
                android:gravity="center">
            </TextView>

            <TextView
                android:id="@+id/tv_aboutus_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="80"
                android:gravity="center"
                android:textColor="@color/hintTextColor">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CompanyAddr"
                android:textColor="@color/black"
                android:gravity="center">
            </TextView>

            <TextView
                android:id="@+id/tv_aboutus_addr"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="80"
                android:gravity="center"
                android:textColor="@color/hintTextColor">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CompanyWeb"
                android:textColor="@color/black"
                android:gravity="center">
            </TextView>

            <TextView
                android:id="@+id/tv_aboutus_web"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="80"
                android:gravity="center"
                android:textColor="@color/hintTextColor">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="100">
            </TextView>
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="85">
    </LinearLayout>
</LinearLayout>

